--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,125 @@
+/* Shared Styles */
 * {
     padding: 0;
     margin: 0;
     font-family: "Work Sans", sans-serif;
+}
+
+body {
+    font-size: 1rem;
+}
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+p:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+img {
+    max-width: 100%;
+    border-radius: 8px;
+}
+
+.bg-primary {
+    background: rgba(255, 144, 14, 0.10);
+}
+
+.fs-primary {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #131313;
+}
+
+.btn-primary {
+    border-radius: 8px;
+    background-color: #FF900E;
+    color: #FFF;
+    font-size: 1.25rem;
+    font-weight: 600;
+    padding: 10px 25px;
+    border: 0;
+    text-decoration: none;
+    display: inline-block;
+    line-height: 35px;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.flex {
+    display: flex;
+}
+
+/* Header Styles */
+header {
+    padding: 30px 0;
+}
+
+.nav-bar {
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.nav-items {
+    gap: 30px;
+}
+
+.nav-items a {
+    text-decoration: none;
+    color: #424242;
+    font-weight: 500;
+    font-size: 1.125rem;
+}
+
+.banner-content {
+    max-width: 800px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+}
+
+.banner-content h1 {
+    max-width: 600px;
+    margin: 0 auto;
+    font-size: 3.5rem;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+
+.banner-content h1 span {
+    display: block;
+}
+
+.banner-content p {
+    margin-bottom: 30px;
+}
+
+/* Responsive Styles */
+@media (max-width: 992px) {
+    .flex-dir-col {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .nav-bar h3 {
+        margin-bottom: 10px;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 992px) {
+
+}
+
+@media (max-width: 576px) {
+
 }
